--- a/JD/index.css
+++ b/JD/index.css
@@ -212,7 +212,7 @@
     
     .nav-ul-select {
         width: 280px;
-        /*top: 8px;*/
+        top: 0;
         position: absolute;
         z-index: 2;
         margin-left: 5.5px;
@@ -381,6 +381,8 @@
     }
     
     .buycar-dropdown {
+        position: relative;
+        z-index: 4;
         width: 308px;
         height: 80px;
         line-height: 80px;
@@ -392,7 +394,7 @@
         border: 1px solid #ccc;
         border-top: none;
         margin-top: 2px;
-        box-shadow: 1px 1px 2px 2px rgba(1, 1, 1, .3);
+        /*box-shadow: 1px 1px 2px 2px rgba(1, 1, 1, .3);*/
         display: none;
     }
     
@@ -1425,10 +1427,10 @@
         /*margin: 0 auto;*/
         /*position: relative;*/
         position: fixed;
-        top: 70%;
+        top: 80%;
         left: 50%;
         transform: translateX(-50%);
-        z-index: 3;
+        z-index: 212;
         display: none;
     }
     
