--- a/JD/middle.css
+++ b/JD/middle.css
@@ -97,6 +97,29 @@
 .middlect-bg-content ul li:hover {
   opacity: .7;
 }
+.middlect-aside {
+  background: #666;
+  position: fixed;
+  left: 80px;
+  top: 80%;
+  transform: translateY(-100%);
+  z-index: 444;
+}
+.middlect-aside ul a {
+  color: #fff;
+}
+.middlect-aside ul a li {
+  width: 34px;
+  padding: 3px 0;
+  border-bottom: 1px solid #eaeaea;
+  transition: all .2s;
+}
+.middlect-aside ul a li:hover {
+  background: red;
+}
+.middlect-aside ul a .last-li {
+  background: red;
+}
 #ct-2-middle-first {
   overflow: visible;
 }
@@ -158,4 +181,272 @@
 }
 .middle-content-ul #right img:hover {
   width: 180px;
+}
+#liveBox {
+  width: 590px;
+  height: 523px;
+  float: left;
+  padding: 0 5px 20px 0;
+}
+#liveBox .live-head {
+  width: 590px;
+  height: 58px;
+  background: #974676;
+}
+#liveBox .live-head div {
+  height: 30px;
+  transform: translateY(50%);
+}
+#liveBox .live-head div h3 {
+  float: left;
+  margin: 0;
+  padding: 0;
+  margin-left: 5px;
+  font-size: 22px;
+  color: #fff;
+  height: 26px;
+  line-height: 30px;
+  font-weight: 400;
+  max-width: 100px;
+  font-family: fzzhengheis-el-gbregular;
+  word-wrap: break-word;
+  word-break: break-all;
+  white-space: nowrap;
+  text-overflow: ellipsis;
+}
+#liveBox .live-head div svg {
+  width: 4em;
+  height: 2em;
+}
+#liveBox .live-head div ul {
+  float: right;
+  margin-right: 20px;
+}
+#liveBox .live-head div ul a {
+  display: inline-block;
+  height: 24px;
+  line-height: 24px;
+  padding: 0 10px;
+  border: 1px solid #fff;
+  color: #fff;
+  margin-left: 10px;
+  margin-bottom: 10px;
+  max-width: 100px;
+  overflow: hidden;
+  word-wrap: break-word;
+  word-break: break-all;
+  white-space: nowrap;
+  text-overflow: ellipsis;
+  opacity: .8;
+}
+#liveBox .live-head div ul a:hover {
+  opacity: 1;
+}
+#liveBox .live-ct {
+  width: 590px;
+  height: 410px;
+  margin-right: 5px;
+}
+#liveBox .live-ct .live-ct-1 {
+  width: 183px;
+  height: 260px;
+  float: left;
+  overflow: hidden;
+}
+#liveBox .live-ct .live-ct-1 img {
+  width: 193px;
+  height: 260px;
+  position: relative;
+  transition: all 1s;
+}
+#liveBox .live-ct .live-ct-1 img:hover {
+  margin-left: -20px;
+}
+#liveBox .live-ct .live-ct-2 {
+  float: right;
+}
+#liveBox .live-ct .live-ct-2 ul {
+  width: 400px;
+}
+#liveBox .live-ct .live-ct-2 ul li {
+  float: left;
+  width: 183px;
+  height: 130px;
+  margin-left: 5px;
+}
+#liveBox .live-ct .live-ct-2 ul li .info-right {
+  width: 183px;
+}
+#liveBox .live-ct .live-ct-2 ul li .info-right:hover {
+  color: red;
+}
+#liveBox .live-ct .live-ct-2 ul li .info-right .info-text {
+  float: left;
+}
+#liveBox .live-ct .live-ct-2 ul li .info-right .info-text p {
+  width: 56px;
+  height: 26px;
+}
+#liveBox .live-ct .live-ct-2 ul li .info-right img {
+  float: right;
+  width: 100px;
+  height: 100px;
+  transition: all .5s;
+  position: relative;
+}
+#liveBox .live-ct .live-ct-2 ul li .info-right img:hover {
+  margin-right: 5px;
+}
+#liveBox .live-ct .live-ct-3 li {
+  float: left;
+  width: 183px;
+  height: 130px;
+  overflow: hidden;
+  margin-right: 10px;
+}
+#liveBox .live-ct .live-ct-3 li img {
+  height: 100%;
+  width: 193px;
+  transition: all .5s;
+}
+#liveBox .live-ct .live-ct-3 li img:hover {
+  width: 178px;
+}
+#liveBox .live-foot {
+  height: 35px;
+  width: 570px;
+  overflow: hidden;
+  position: relative;
+}
+#liveBox .live-foot > a {
+  display: block;
+  width: 10px;
+  height: 54px;
+  position: absolute;
+  top: 25%;
+  display: none;
+  z-index: 4;
+}
+#liveBox .live-foot .btn-right {
+  left: 100%;
+  transform: translateX(-100%);
+}
+#liveBox .live-foot div {
+  position: absolute;
+}
+#liveBox .live-foot div a {
+  display: block;
+  float: left;
+  border-right: 1px solid #dedfe0;
+  padding: 0 12px;
+  height: 20px;
+  margin-top: 7px;
+}
+#liveBox .live-foot div a img {
+  display: block;
+  width: 70px;
+  height: 35px;
+  margin-top: -7px;
+}
+.noshopping .noshopping-box {
+  width: 1190px;
+  margin: 0 auto;
+}
+.noshopping .noshopping-box ul {
+  width: 1190px;
+}
+.noshopping .noshopping-box ul a {
+  display: inline-block;
+  padding: 4px;
+  width: 220px;
+  height: 305px;
+  border: 1px solid #fff;
+  background-color: #fff;
+  text-align: center;
+  overflow: hidden;
+}
+.noshopping .noshopping-box ul a:hover {
+  border: 1px solid red;
+}
+.noshopping .noshopping-box ul a li img {
+  display: inline-block;
+  width: auto;
+  height: 220px;
+  background-color: #f7f7f7;
+}
+.noshopping .noshopping-box ul a li .firstP {
+  padding: 10px;
+  text-align: left;
+  overflow: hidden;
+  margin-bottom: 5px;
+  height: 36px;
+}
+.noshopping .noshopping-box ul a li .secondP {
+  font-size: 12px;
+  color: red;
+}
+.footer {
+  height: 500px;
+  background: #eaeaea;
+  padding-top: 40px;
+}
+.footer .footerBox {
+  width: 1190px;
+  margin: 0 auto;
+}
+.footer .footerBox .footer-head {
+  width: 100%;
+  border-bottom: 1px solid #eaeaea;
+}
+.footer .footerBox .footer-head li {
+  float: left;
+  width: 297px;
+}
+.footer .footerBox .footer-head li svg {
+  font-size: 40px;
+}
+.footer .footerBox .footer-head li span {
+  overflow: hidden;
+  width: 100%;
+  height: 42px;
+  line-height: 42px;
+  font-size: 18px;
+  font-weight: 700;
+  text-overflow: ellipsis;
+  white-space: nowrap;
+  color: #444;
+}
+.footer .footerBox .footer-ct .footer-ct-ul {
+  border-bottom: 1px solid #eaeaea;
+}
+.footer .footerBox .footer-ct .footer-ct-ul > li {
+  float: left;
+  width: 198px;
+  line-height: 22px;
+}
+.footer .footerBox .footer-ct .footer-ct-ul > li p {
+  margin-bottom: 5px;
+  font-size: 14px;
+}
+.footer .footerBox .footer-ct .footer-ct-ul > li .footer-ct-ul-child a {
+  color: #666;
+}
+.footer .footerBox .footer-ct .footer-ct-ul .lastLi {
+  float: right;
+  width: 200px;
+  height: 150px;
+  background: url(http://misc.360buyimg.com/mtd/pc/index/2.0.0/home/images/ico_footer.png) no-repeat 0 0;
+}
+.footer .footerBox .footer-ct .footer-ct-ul .lastLi p {
+  text-align: center;
+  margin-bottom: 15px;
+  font-size: 14px;
+}
+.footer .footerBox .footer-foot {
+  width: 990px;
+  margin: 0 auto;
+}
+.footer .footerBox .footer-foot p a {
+  display: inline-block;
+  color: #666;
 }
