--- a/JD/middle.less
+++ b/JD/middle.less
@@ -1,229 +1,547 @@
-    @themeColor: #f6f6f6;
-    @contentColor: #e0e0e0;
-    @margin: 0 auto;
-    @padding: 0;
-    @ctWidth: 1190px;
-    @textA: center;
-    .titleInit(@w: 1190px, @h: 35px) {
+@themeColor: #f6f6f6;
+@contentColor: #e0e0e0;
+@margin: 0 auto;
+@padding: 0;
+@ctWidth: 1190px;
+@textA: center;
+.titleInit(@w: 1190px, @h: 35px) {
+    width: @w;
+    height: @h;
+    margin: @margin;
+    padding: 0 0 20px;
+    text-align: @textA;
+    background: url()
+}
+
+.contentInit() {
+    width: @ctWidth;
+}
+
+.h3() {
+    display: inline;
+    padding: 0 50px;
+    background-color: #f6f6f6;
+    font-weight: 400;
+    font-size: 26px;
+    color: #333;
+    font-family: fzzhengheis-el-gbregular;
+}
+
+.init(@m: 0,
+@p: 0) {
+    margin: @m;
+    padding: @p;
+}
+
+.middlect {
+    width: 100%;
+    background-color: @themeColor;
+}
+
+.ctInit {
+    width: @ctWidth;
+    background-color: @themeColor;
+}
+
+.p {
+    .init(0,
+    0);
+}
+
+.dw {
+    position: relative;
+}
+
+.content(@b: #66B687) {
+    width: 390px;
+    height: 170px;
+    overflow: hidden; //难点：形成遮罩
+    .left {
+        width: 140px;
+        height: 170px;
+        background: @b;
+        position: absolute;
+        .info {
+            width: 100px;
+            background: @b;
+            margin: @margin;
+            h4 {
+                text-align: center;
+            }
+            p {
+                overflow: hidden;
+                height: 40px;
+                border-top: 2px solid #fff;
+                border-bottom: 2px solid #fff;
+                font-size: 22px;
+                line-height: 40px;
+                text-align: center;
+                font-family: fzzhengheis-el-gbregular;
+                font-weight: 400;
+            }
+        }
+    }
+    .right {
+        width: 400px;
+        height: 170px;
+        img {
+            display: block;
+            width: 400px;
+            height: 170px; // float: right;
+            transition: all .4s ease-in-out;
+            &:hover {
+                // margin-left: -10px;
+                width: 390px;
+            }
+        }
+    }
+} // .middlect-bg {
+//     background:@contentColor;
+// }
+.middlebox {
+    .middlect-sm {
+        width: @ctWidth;
+        margin: @margin; // height: 50px;
+        .middlect-c-1 {
+            .title {
+                .titleInit();
+            }
+            .middle-c-ul {
+                margin-left: -40px;
+                .middle-content {
+                    float: left; // margin-left: 20px;
+                    // margin-top:20px;
+                    margin: 20px 20px 0 0;
+                    .content();
+                }
+            }
+        }
+    }
+}
+
+.middlect-bg-content {
+    width: 100%;
+    height: 100px;
+    background: #e0e0e0;
+    padding: 20px 0;
+    margin-top: 30px;
+    ul {
+        width: 1190px;
+        margin: 0 auto;
+        li {
+            float: left;
+            width: 396px;
+            height: 100px;
+            transition: all .5s;
+            img {
+                width: 396px;
+                height: 100px;
+            }
+            &:hover {
+                opacity: .7;
+            }
+        }
+    }
+}
+
+.middlect-aside {
+    background: #666;
+    position: fixed;
+    left: 80px;
+    top: 80%;
+    transform: translateY(-100%);
+    z-index: 444; // display: none;
+    ul {
+        a {
+            color: #fff;
+            li {
+                width: 34px;
+                // min-height: 34px; // line-height: 34px;
+                padding: 3px 0;
+                border-bottom: 1px solid #eaeaea;
+                transition: all .2s;
+                &:hover {
+                    background: red;
+                }
+            }
+            .last-li {
+                background: red;
+            }
+        }
+    }
+}
+
+.CarouselInit(@w: 400px,
+@h: 100px) {
+    .carousel {
         width: @w;
         height: @h;
-        margin: @margin;
-        padding: 0 0 20px;
-        text-align: @textA;
-        background: url()
-    }
-
-    .contentInit() {
-        width: @ctWidth;
-    }
-
-    .h3() {
-        display: inline;
-        padding: 0 50px;
-        background-color: #f6f6f6;
-        font-weight: 400;
-        font-size: 26px;
-        color: #333;
-        font-family: fzzhengheis-el-gbregular;
-    }
-
-    .init(@m: 0,
-    @p: 0) {
-        margin: @m;
-        padding: @p;
-    }
-
-    .middlect {
-        width: 100%;
-        background-color: @themeColor;
-    }
-
-    .ctInit {
-        width: @ctWidth;
-        background-color: @themeColor;
-    }
-
-    .p {
-        .init(0,
-        0);
-    }
-
-    .dw {
-        position: relative;
-    }
-
-    .content(@b: #66B687) {
-        width: 390px;
-        height: 170px;
-        overflow: hidden; //难点：形成遮罩
-        .left {
-            width: 140px;
-            height: 170px;
-            background: @b;
-            position: absolute;
-            .info {
-                width: 100px;
-                background: @b;
-                margin: @margin;
-                h4 {
-                    text-align: center;
-                }
-                p {
-                    overflow: hidden;
-                    height: 40px;
-                    border-top: 2px solid #fff;
-                    border-bottom: 2px solid #fff;
-                    font-size: 22px;
-                    line-height: 40px;
-                    text-align: center;
-                    font-family: fzzhengheis-el-gbregular;
-                    font-weight: 400;
-                }
+        z-index: 4;
+        .ct-img {
+            width: @w;
+            height: @h;
+            li {
+                width: @w;
+                height: @h;
             }
-        }
-        .right {
-            width: 400px;
-            height: 170px;
             img {
-                display: block;
-                width: 400px;
-                height: 170px; // float: right;
-                transition: all .4s ease-in-out;
-                &:hover {
-                    // margin-left: -10px;
-                    width: 390px;
-                }
+                width: 100%;
+                height: 100%;
             }
         }
-    } // .middlect-bg {
-    //     background:@contentColor;
-    // }
-    .middlebox {
-        .middlect-sm {
-            width: @ctWidth;
-            margin: @margin; // height: 50px;
-            .middlect-c-1 {
-                .title {
-                    .titleInit();
-                }
-                .middle-c-ul {
-                    margin-left: -40px;
-                    .middle-content {
-                        float: left; // margin-left: 20px;
-                        // margin-top:20px;
-                        margin: 20px 20px 0 0;
-                        .content();
+        a {
+            z-index: 4; // #btn-next {
+            //     left:@w;
+            // }
+        }
+    }
+    #btn-next {
+        left: @w - 40;
+    }
+    .bullet {
+        // position: relative;
+        z-index: 4;
+    }
+}
+
+#ct-2-middle-first {
+    overflow: visible;
+}
+
+.Carousel {
+    position: relative;
+    overflow: visible;
+    .CarouselInit(@w: 400px,
+    @h: 360px);
+}
+
+.middle-content(@w: 190px,
+@h: 170px) {
+    li {
+        width: @w+10;
+        float: left; // margin-left: 10px;
+        // background: #fff;
+        #left {
+            width: @w+10;
+            height: 0;
+            background: transparent;
+            top: 42%;
+            h4 {
+                border-top: 2px solid #fff
+            }
+            p {
+                border-bottom: none;
+            }
+        } // #info {
+        //     // width: @w+10;
+        //     // height: @h;
+        // }
+    }
+    #right {
+        width: @w+10;
+        img {
+            width: @w;
+            height: @h+10;
+            &:hover {
+                // height: 170px;
+                width: @w - 10; // margin-top: -10px;
+            }
+        }
+    }
+}
+
+.middle-content-ul {
+    width: 400px;
+    .middle-content();
+}
+
+#liveBox {
+    width: 590px;
+    height: 523px;
+    float: left;
+    padding: 0 5px 20px 0; // background: red;
+    .live-head {
+        width: 590px;
+        height: 58px;
+        background: #974676;
+        div {
+            height: 30px;
+            transform: translateY(50%);
+            h3 {
+                float: left;
+                margin: 0;
+                padding: 0;
+                margin-left: 5px;
+                font-size: 22px;
+                color: #fff;
+                height: 26px;
+                line-height: 30px;
+                font-weight: 400;
+                max-width: 100px;
+                font-family: fzzhengheis-el-gbregular;
+                word-wrap: break-word;
+                word-break: break-all;
+                white-space: nowrap;
+                text-overflow: ellipsis;
+            }
+            svg {
+                width: 4em;
+                height: 2em;
+            }
+            ul {
+                float: right;
+                margin-right: 20px;
+                a {
+                    display: inline-block;
+                    height: 24px;
+                    line-height: 24px;
+                    padding: 0 10px;
+                    border: 1px solid #fff;
+                    color: #fff;
+                    margin-left: 10px;
+                    margin-bottom: 10px;
+                    max-width: 100px;
+                    overflow: hidden;
+                    word-wrap: break-word;
+                    word-break: break-all;
+                    white-space: nowrap;
+                    text-overflow: ellipsis;
+                    opacity: .8;
+                    &:hover {
+                        opacity: 1; // border:2px solid #fff;
                     }
                 }
             }
         }
     }
-
-    .middlect-bg-content {
-        width: 100%;
-        height: 100px;
-        background: #e0e0e0;
-        padding: 20px 0;
-        margin-top: 30px;
-        ul {
-            width: 1190px;
-            margin: 0 auto;
+    .live-ct {
+        width: 590px;
+        height: 410px; // background: #666;
+        margin-right: 5px; // background: #fff;
+        .live-ct-1 {
+            width: 183px;
+            height: 260px;
+            float: left;
+            overflow: hidden;
+            img {
+                width: 193px;
+                height: 260px;
+                position: relative; // position: absolute;                
+                transition: all 1s;
+                &:hover {
+                    // width: 283px;
+                    // left: -20px;//不是自己想要的效果，但是查阅了资料，说是可以生效的。难道是position设置有问题
+                    margin-left: -20px;
+                }
+            }
+        }
+        .live-ct-2 {
+            float: right;
+            ul {
+                width: 400px;
+                li {
+                    float: left;
+                    width: 183px;
+                    height: 130px;
+                    margin-left: 5px;
+                    .info-right {
+                        width: 183px; // height: 260px;
+                        &:hover {
+                            color: red;
+                        }
+                        .info-text {
+                            float: left;
+                            p {
+                                width: 56px;
+                                height: 26px;
+                            }
+                        }
+                        img {
+                            float: right;
+                            width: 100px;
+                            height: 100px;
+                            transition: all .5s;
+                            position: relative;
+                            &:hover {
+                                // right: 5px; // width: 105px;
+                                margin-right: 5px;
+                            }
+                        }
+                    }
+                }
+            }
+        }
+        .live-ct-3 {
             li {
                 float: left;
-                width: 396px;
-                height: 100px;
-                transition: all .5s;
+                width: 183px;
+                height: 130px;
+                overflow: hidden;
+                margin-right: 10px;
                 img {
-                    width: 396px;
-                    height: 100px;
-                }
-                &:hover {
-                    opacity: .7;
-                }
-            }
-        }
-    }
-
-    .CarouselInit(@w: 400px,
-    @h: 100px) {
-        .carousel {
-            width: @w;
-            height: @h;
-            z-index: 4;
-            .ct-img {
-                width: @w;
-                height: @h;
-                li {
-                    width: @w;
-                    height: @h;
-                }
-                img {
-                    width: 100%;
                     height: 100%;
+                    width: 193px;
+                    transition: all .5s;
+                    &:hover {
+                        width: 178px;
+                    }
                 }
             }
-            a {
-                z-index: 4; // #btn-next {
-                //     left:@w;
-                // }
-            }
-        }
-        #btn-next {
-            left: @w - 40;
-        }
-        .bullet {
-            // position: relative;
-            z-index: 4;
         }
     }
-
-    #ct-2-middle-first {
-        overflow: visible;
-    }
-
-    .Carousel {
+    .live-foot {
+        height: 35px;
+        width: 570px;
+        overflow: hidden;
         position: relative;
-        overflow: visible;
-        .CarouselInit(@w: 400px,
-        @h: 360px);
-    }
-
-    .middle-content(@w: 190px,
-    @h: 170px) {
-        li {
-            width: @w+10;
-            float: left; // margin-left: 10px;
-            // background: #fff;
-            #left {
-                width: @w+10;
-                height: 0;
-                background: transparent;
-                top: 42%;
-                h4 {
-                    border-top: 2px solid #fff
-                }
-                p {
-                    border-bottom: none;
-                }
-            } // #info {
-            //     // width: @w+10;
-            //     // height: @h;
-            // }
+        &>a {
+            // display: inline-block;
+            display: block;
+            width: 10px;
+            height: 54px;
+            position: absolute;
+            top: 25%; // overflow: hidden;
+            display: none;
+            z-index: 4; // transform: translateY(-50%);
         }
-        #right {
-            width: @w+10;
-            img {
-                width: @w;
-                height: @h+10;
-                &:hover {
-                    // height: 170px;
-                    width: @w - 10; // margin-top: -10px;
+        .btn-right {
+            left: 100%;
+            transform: translateX(-100%);
+        }
+        div {
+            position: absolute;
+            a {
+                // position: absolute;
+                display: block;
+                float: left;
+                border-right: 1px solid #dedfe0;
+                padding: 0 12px;
+                height: 20px;
+                margin-top: 7px;
+                img {
+                    display: block;
+                    width: 70px;
+                    height: 35px;
+                    margin-top: -7px;
                 }
             }
         }
     }
+}
 
-    .middle-content-ul {
-        width: 400px;
-        .middle-content();
+// #liveBox {
+//     #live
+// }
+.noshopping {
+    .noshopping-box {
+        width: 1190px;
+        margin: 0 auto;
+        ul {
+            width: 1190px;
+            a {
+                display: inline-block; // width: display: block;
+                padding: 4px;
+                width: 220px;
+                height: 305px;
+                border: 1px solid #fff;
+                background-color: #fff;
+                text-align: center;
+                overflow: hidden;
+                &:hover {
+                    border: 1px solid red;
+                }
+                li {
+                    img {
+                        display: inline-block;
+                        width: auto;
+                        height: 220px;
+                        background-color: #f7f7f7;
+                    }
+                    .firstP {
+                        padding: 10px;
+                        text-align: left;
+                        overflow: hidden;
+                        margin-bottom: 5px;
+                        height: 36px;
+                    }
+                    .secondP {
+                        font-size: 12px;
+                        color: red;
+                    }
+                }
+            }
+        }
     }
+}
+
+.footer {
+    height: 500px;
+    background: #eaeaea;
+    padding-top: 40px;
+    .footerBox {
+        width: @ctWidth;
+        margin: @margin;
+        .footer-head {
+            width: 100%;
+            border-bottom: 1px solid #eaeaea;
+            li {
+                float: left;
+                width: 297px;
+                svg {
+                    font-size: 40px;
+                }
+                span {
+                    overflow: hidden;
+                    width: 100%;
+                    height: 42px;
+                    line-height: 42px;
+                    font-size: 18px;
+                    font-weight: 700;
+                    text-overflow: ellipsis;
+                    white-space: nowrap;
+                    color: #444;
+                }
+            }
+        }
+        .footer-ct {
+            .footer-ct-ul {
+                border-bottom: 1px solid #eaeaea;
+                &>li {
+                    float: left;
+                    width: 198px;
+                    line-height: 22px;
+                    p {
+                        margin-bottom: 5px;
+                        font-size: 14px;
+                    }
+                    .footer-ct-ul-child {
+                        a {
+                            color: #666;
+                        }
+                    }
+                }
+                .lastLi {
+                    float: right;
+                    width: 200px;
+                    height: 150px;
+                    background: url(http://misc.360buyimg.com/mtd/pc/index/2.0.0/home/images/ico_footer.png) no-repeat 0 0;
+                    p {
+                        text-align: center;
+                        margin-bottom: 15px;
+                        font-size: 14px;
+                    } // p {}
+                }
+            }
+        }
+        .footer-foot {
+            width: 990px;
+            margin: @margin;
+            p {
+                a {
+                    display: inline-block; // margin: 0 6px;
+                    color: #666;
+                }
+            }
+        }
+    }
+}
